# Aura

./: .gitignore  Aura.sln  CMakeLists.txt  README.md  TODO  TODO.md
Aura/: Animation.cpp  Animation.h  Aura.cpp  Aura.h  Aura.vcxproj  Aura.vcxproj.filters  Body.h  Buff.cpp  Buff.h  ChainBody.cpp  ChainBody.h  CircleBody.cpp  CircleBody.h  ClassDiagram.cd  Drone.cpp  Drone.h  Figur.cpp  Figur.h  Gegner.cpp  Gegner.h  Goat.cpp  Goat.h  Grenze.cpp  Grenze.h  HealthBar.h  Healthbar.cpp  Laser.cpp  Laser.h  LaserBox.h  Laserbox.cpp  Particle.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  PhysicsSystem.cpp  PhysicsSystem.h  PolygonBody.cpp  PolygonBody.h  Spieler.cpp  Spieler.h  (+20 more)
Aura/GUI/: gui.h
Aura/ParticleSystem/: ParticleEmitter.cpp  ParticleEmitter.h  ParticleSystem.cpp  ParticleSystem.h  ShapeEmitter.cpp  ShapeEmitter.h  SpriteEmitter.cpp  SpriteEmitter.h
Aura/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
Aura/RessourceManager/: Manager.cpp  Manager.h  Resource.h  Resources.cpp  Resources.h  RessourceManager.cpp  RessourceManager.h
src/: Animation.cpp  Animation.h  Aura.cpp  Aura.h  Buff.cpp  Buff.h  CMakeLists.txt  DDraw.cpp  DDraw.h  Drone.cpp  Drone.h  Figur.cpp  Figur.h  Gegner.cpp  Gegner.h  Goat.cpp  Goat.h  Laser.cpp  Laser.h  LaserBox.h  Laserbox.cpp  Spieler.cpp  Spieler.h  Spielfeld.cpp  Steuerung.cpp  Steuerung.h  Terrain.cpp  Terrain.h  WorldObject.h  Worldobject.cpp  main.cpp  math.h  rammy.cpp  rammy.h  spielfeld.h  xp.cpp  xp.h
src/GUI/: CMakeLists.txt  gui.cpp  gui.h
src/ParticleSystem/: ParticleEmitter.cpp  ParticleEmitter.h  (+4 more)
(+47 files in other folders)
